--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,13 @@
     package="utp.edu.wykrywaczswiatel">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
-
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +20,9 @@
         android:theme="@style/Theme.WykrywaczSwiatel">
         <activity
             android:name=".photoDetails"
+            android:exported="false" />
+        <activity
+            android:name=".BazaWykrywaczSwiatel"
             android:exported="false" />
         <activity android:name=".MainActivity">
             <intent-filter>
